# ibkr-llm-assistant

./: .envrc  .gitignore  Dockerfile  README.md  devenv.nix  docker-compose.yaml  main.py  mcp-agent.py  mcp_agent.config.yaml  mcp_app.py  mcp_client.py  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  run_agent.py  run_chat.py  settings.py
.github/workflows/: docker-publish.yml
agents/: ibkr.py
scripts/: init_db.sh
servers/calendar/: server.py
servers/fmp/: server.py
servers/fmp/helpers/: fmp_events_helper.py  fmp_quotes_helper.py
servers/ibkr/: server.py  settings.py
servers/ibkr/helpers/: client.py  trading.py
servers/ibkr/tools/: __init__.py  contracts.py  positions.py  scanner.py  trading.py
servers/ibkr/utilities/: __init__.py  telegram_bot.py
src/: mcp_app.py  run_agent.py  run_chat.py  run_prompt.py  settings.py
src/agents/: ibkr.py  prompt.py
src/application/: __init__.py  rich_app.py
src/fmp_helpers/: fmp_events_helper.py  fmp_quotes_helper.py
src/ib_helper/: client.py  interfaces.py  positions.py  trading.py
src/mcp_servers/: __init__.py  calendar.py  fmp.py  quotes.py
src/mcp_servers/ibkr/: __init__.py  contracts.py  positions.py  scanner.py  trading.py
src/quote_helpers/: yahoo_quotes_helper.py
src/servers/calendar/: server.py  settings.py
src/utilities/: __init__.py  log_helper.py  settings.py  telegram_bot.py
src/web/: app.py  database.py  gunicorn_conf.py  scheduler.py
src/web_app/: templating.py
tests/: __init__.py  test_ib_helper.py  test_quotes_helper.py  test_trading.py
(+27 files in other folders)
